--- a/themes/even/templates/index.html
+++ b/themes/even/templates/index.html
@@ -37,6 +37,16 @@
       {% endblock css %}
 
       {% block extra_head %}
+          {% if config.extra.google_analytics %}
+          <!-- Global site tag (gtag.js) - Google Analytics -->
+          <script async src="https://www.googletagmanager.com/gtag/js?id=UA-50631312-12"></script>
+          <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', '{{ config.extra.google_analytics }}');
+          </script>
+          {% endif %}
       {% endblock extra_head %}
     </head>
 
