--- a/themes/even/templates/page.html
+++ b/themes/even/templates/page.html
@@ -49,6 +49,21 @@
                     {% endfor %}
                 </div>
             {% endif %}
+
+            {{config.extra.disqus_id}}
+            {% if config.extra.disqus_id %}
+                <div id="disqus_thread"></div>
+                <script>
+                (function() {
+                var d = document, s = d.createElement('script');
+                s.src = 'https://{{config.extra.disqus_id}}.disqus.com/embed.js';
+                s.setAttribute('data-timestamp', +new Date());
+                (d.head || d.body).appendChild(s);
+                })();
+                </script>
+                <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+            {% endif %}
+
             {% if page.earlier or page.later or page.lighter or page.heavier %}
                 <div class="post-nav">
                     {% if page.earlier %}
